--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,9 @@ Description: Fetches the Covid19 Data from the API and saves in the R package
 License: MIT
 Encoding: UTF-8
 LazyData: true
+Imports: 
+  flexdashboard,
+  tidyverse, 
+  janitor, 
+  pacman, 
+  jsonlite
