--- a/.github/workflows/setup.yml
+++ b/.github/workflows/setup.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Install R Packages
         run: |
-          Rscript -e 'options(Ncpus = 2); pkgs = c("pacman", "tidyverse", "jsonlite"); 
+          Rscript -e 'options(Ncpus = 2); pkgs = c("pacman", "tidyverse", "jsonlite", "janitor"); 
           if(length(new.pkgs <- setdiff(pkgs, rownames(installed.packages())))) install.packages(new.pkgs, dependencies=T)'
       
       - name: Run script
